packages/cargo_tools_macros/tests/compile_fail/wasm_async_trait_const.stderr
error: wasm_async_trait can only be applied to trait definitions or trait implementations
 --> tests/compile_fail/wasm_async_trait_const.rs:5:1
  |
5 | const INVALID_CONST: i32 = 42;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
